# wb_helper

./: .env.example  .gitignore  Dockerfile  Dockerfile.web  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
src/wb_helper/: __init__.py  config.py  constants.py  domain.py  jobs.py  logging.py  polling.py  queue.py  telegram_client.py  url_utils.py  web.py  worker.py
src/wb_helper/bot/: router.py
src/wb_helper/extractors/: reels.py
src/wb_helper/marketplaces/: __init__.py  base.py  ozon.py  wb.py
src/wb_helper/parsers/: articles.py
src/wb_helper/services/: formatting.py  presentation.py  resolution.py
src/wb_helper/storage/: db.py  models.py  repository.py
tests/: conftest.py  test_articles.py  test_config.py  test_extractors.py  test_formatting.py  test_marketplaces.py  test_presentation.py  test_repository.py  test_resolution_service.py  test_telegram_client.py  test_urls.py
